crates/openehr-serde/tests/snapshots/full_rm_canonical_json__EXTRACT_VERSION_SPEC.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "EXTRACT_VERSION_SPEC",
  "include_all_versions": true,
  "include_revision_history": false,
  "include_data": true
}
