crates/openehr-serde/tests/snapshots/full_rm_canonical_json__FEEDER_AUDIT.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "FEEDER_AUDIT",
  "originating_system_audit": {
    "_type": "FEEDER_AUDIT_DETAILS",
    "system_id": "legacy.example.org"
  }
}
