crates/openehr-serde/tests/snapshots/full_rm_canonical_json__GENERIC_CONTENT_ITEM.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "GENERIC_CONTENT_ITEM",
  "name": {
    "_type": "DV_TEXT",
    "value": "generic content"
  },
  "archetype_node_id": "openEHR-EHR-GENERIC_CONTENT_ITEM.sample.v1",
  "is_primary": true
}
