crates/openehr-serde/tests/snapshots/full_rm_canonical_json__HISTORY.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "HISTORY",
  "name": {
    "_type": "DV_TEXT",
    "value": "history"
  },
  "archetype_node_id": "at0001",
  "origin": {
    "_type": "DV_DATE_TIME",
    "value": "2026-07-02T10:00:00Z"
  }
}
